@@ -19,6 +19,6 @@ Attribution-ShareAlike 3.0 Unported License.
 For the error message page, we used the image ( http://www.flickr.com/photos/gsfc/4253934347/sizes/o/ ) from NASA Goddard Space Flight Center, which is
 licensed under a Creative Commons generic attribution license.
 
-TKI was forked from Blacknova Traders.
+TKI was forked from Blacknova Traders. For more details, please see the copyright page (linked from footer in game).
 
 We are extremely greatful for these resources.
