@@ -96,15 +96,11 @@ if (news.initTicker("news_ticker") == true)
 <br>
 
 {* Items to the left (SF logo) and to the right (mem, copyright, news) *}
-{if $variables['suppress_logo'] == false}
-    <p style='float:left; text-align:left'><a href='https://github.com/thekabal/tki'>The Kabal Invasion Github project page</a></p>
-{/if}
-    <p style="font-size:smaller; float:right; text-align:right"><a class="new_link" href="news.php{$variables['sf_logo_link']}">{$langvars['l_local_news']}</a>
-    <br>&copy; {$variables['cur_year']} The TKI development team, Ron Harwood, and the BNT development team
+    <p style='float:left; text-align:left'><a class="new_link" href='https://github.com/thekabal/tki'>Github project page for The Kabal Invasion</a>
+    <br><a class="new_link" href="copyright.php">&copy; {$variables['cur_year']} The TKI development team</a></p>
+    <p style="float:right; text-align:right"><a class="new_link" href="news.php{$variables['sf_logo_link']}">{$langvars['l_local_news']}</a>
 
-{if isset($variables['footer_show_debug']) && $variables['footer_show_debug'] == true}
     <br>{$variables['elapsed']} {$langvars['l_seconds']} {$langvars['l_time_gen_page']} / {$variables['mem_peak_usage']}{$langvars['l_peak_mem']}
-{/if}
 </p>
 
 <p style="text-align:center;">
