@@ -1,3 +1,7 @@
 TheKabal - September 13, 2016
 -------------------------------
+Change the copyright notice, add a copyright page, clarify further
+
+TheKabal - September 13, 2016
+-------------------------------
 Initial commit
